Fixed whitespace bug

--- a/src/styles/annotate.css
+++ b/src/styles/annotate.css
@@ -1,3 +1,7 @@
+.annotation {
+  color: #546E7A;
+}
+
 .annotation > rt {
   font-size: 0.6em;
   color: #616161;
